syntax = "proto3";

package signal;

// Represents a complex number with real and imaginary parts.
message Complex {
    double real = 1;
    double imag = 2;
}

message VectorXcd {
    repeated Complex values = 1;
}



message MovingAverageRequest {
    repeated Complex signal = 1; 
    int32 window_size = 2;       
}


message MovingAverageResponse {
    repeated Complex result = 1; 
}

message RuningSumRequest {
    repeated Complex signal = 1;      
}

message RuningSumResponse {
    repeated Complex result = 1; 
}

message FirstDifferenceRequest {
    repeated Complex signal = 1;      
}


message FirstDifferenceResponse {
    repeated Complex result = 1; 
}

message IFFTRequest {
    repeated Complex signal = 1;      
}


message IFFTResponse {
    repeated Complex result = 1; 
}

message FastWaveletTransformHaarRequest {
    repeated Complex signal = 1;      
}


message FastWaveletTransformHaarResponse  {
    repeated Complex approximation = 1;
    repeated Complex detail = 2;
}


message FastWaveletTransformRequest {
    repeated Complex signal = 1;   
    int32 dec_level = 2;
    string wave_name = 3;   
}


message FastWaveletTransformResponse   {
    repeated VectorXcd approximations = 1;
    repeated VectorXcd details = 2;
}

message FftConvolveRequest {
    repeated Complex signalx = 1;   
    repeated Complex signalh = 2;
    bool shift = 3;  
}

message FftConvolveResponse {
    repeated Complex result = 1; 
}

message FFTRequest {
    repeated Complex signal = 1;      
}

message FFTResponse {
    repeated Complex result = 1; 
}

message Signal {
    repeated Complex values = 1;
}

message AverageRequest {
    repeated VectorXcd signals = 1 ; // Lista de se√±ales complejas
}

message AverageResponse {
    repeated Complex result = 1;  // Resultado del promedio
}

// The signal service definition.
service SignalService {
    rpc ComputeMovingAverage (MovingAverageRequest) returns (MovingAverageResponse);
    rpc ComputeRuningSum (RuningSumRequest) returns (RuningSumResponse);
    rpc ComputeFirstDifference (FirstDifferenceRequest) returns (FirstDifferenceResponse);
    rpc ComputeIFFT (IFFTRequest) returns (IFFTResponse);
    rpc ComputeFastWaveletHaar (FastWaveletTransformHaarRequest) returns (FastWaveletTransformHaarResponse);
    rpc ComputeFastWaveletTransform  (FastWaveletTransformRequest) returns (FastWaveletTransformResponse);
    rpc ComputeFftConvolve (FftConvolveRequest) returns (FftConvolveResponse);
    rpc ComputeFFT (FFTRequest) returns (FFTResponse);
    rpc ComputeAverage (AverageRequest) returns (AverageResponse);
}